--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="user">Email;</string>
     <string name="password">Password ;</string>
     <string name="name">Name ;</string>
-    <string name="title_activity_splash_sceen">SplashSceenActivity</string>
+
 
     <string name="open">Open Drawer</string>
     <string name="close">Close Drawer</string>
@@ -324,16 +324,16 @@
     <string name="styleText102">20. They are used to move the cursor, as an alternative to the mouse</string>
     <string name="styleText103">Listening</string>
     <string name="styleText104">Listen and fill in the blank..</string>
-    <string name="styleText105">1. To go back one space, hit the _________</string>
-    <string name="styleText106">2. To change to capital letters, press the _________</string>
-    <string name="styleText107">3. To change the capital letters permanently, hit the _________</string>
-    <string name="styleText108">4. To insert a tabulation, press the _________</string>
-    <string name="styleText109">5. To activate the “Ctrl” functions, press the _________</string>
-    <string name="styleText110">6. To activate the “alt” function, hit the _________</string>
-    <string name="styleText111">7. To stop the computer doing something, you can press the _________</string>
-    <string name="styleText112">8. Select the text you want to remove, and hit the _________</string>
-    <string name="styleText113">9. Please _________ your pass word.</string>
-    <string name="styleText114">10. It took me two hours to _________</string>
+    <string name="styleText105">1. To go back one space, hit the …………………</string>
+    <string name="styleText106">2. To change to capital letters, press the …………………</string>
+    <string name="styleText107">3. To change the capital letters permanently, hit the …………………</string>
+    <string name="styleText108">4. To insert a tabulation, press the …………………</string>
+    <string name="styleText109">5. To activate the “Ctrl” functions, press the …………………</string>
+    <string name="styleText110">6. To activate the “alt” function, hit the …………………</string>
+    <string name="styleText111">7. To stop the computer doing something, you can press the …………………</string>
+    <string name="styleText112">8. Select the text you want to remove, and hit the …………………</string>
+    <string name="styleText113">9. Please ………………… your pass word.</string>
+    <string name="styleText114">10. It took me two hours to …………………</string>
     <string name="styleText115">Language Work</string>
     <string name="styleText116">Describing functions</string>
     <string name="styleText117">There are many ways of describing a devices function</string>
@@ -562,6 +562,20 @@
     <string name="u3styleText197f">Nan ........</string>
 
 
+    <!--post unit1-->
+    <string name="postUnit1styleText1">Post-test</string>
+    <string name="postUnit1styleText5">6. What is a computer?</string>
+    <string name="postUnit1styleText10">8. What does CPU stand for?</string>
+    <string name="postUnit1styleText15">2. An ……………… device is any hardware component that allows you to enter data and instructions into a computer.</string>
+    <string name="postUnit1styleText20">9. Three commonly used ………………… device are a printer, a monitor, and speakers.</string>
+    <string name="postUnit1styleText25">5. ……………… is any electronic or mechanical part you can see or touch.</string>
+    <string name="postUnit1styleText30">3. Which are the components of a computer?</string>
+    <string name="postUnit1styleText35">7. Which are input devices?</string>
+    <string name="postUnit1styleText40">10. Which is not an output device?</string>
+    <string name="postUnit1styleText45">1. Which is not a storage device?</string>
+    <string name="postUnit1styleText50">4. Describe this diagram by using given words.</string>
+
+
     <!--pre unit1-->
     <string name="preUnit1styleText1">Pre-test</string>
     <string name="preUnit1styleText2">Unit 1</string>
@@ -618,6 +632,19 @@
     <string name="preUnit1styleText53">Output devices</string>
     <string name="preUnit1styleText54">Storage media</string>
 
+
+    <!--post unit2-->
+    <string name="postUnit2styleText1">Post-test</string>
+    <string name="postUnit2styleText5">6. What are the main parts of the CPU?</string>
+    <string name="postUnit2styleText10">2. What does ALU stand for?</string>
+    <string name="postUnit2styleText15">9. What does ALU do?</string>
+    <string name="postUnit2styleText20">4. What type of memory is temporary?</string>
+    <string name="postUnit2styleText25">7. What type of memory is permanent and includes instructions needed by the CPU?</string>
+    <string name="postUnit2styleText30">5. If you want to change the capital letters permanently, what should you do?</string>
+    <string name="postUnit2styleText35">1. If you want to change to capital letter, what should you do?</string>
+    <string name="postUnit2styleText40">8. ........ appears to the right of the main keyboard. The NumLock key is used to switch from numbers to editing keys.</string>
+    <string name="postUnit2styleText45">3. What do you call the mouse which doesn\'t have a ball?</string>
+
     <!--pre unit2-->
     <string name="preUnit2styleText1">Pre-test</string>
     <string name="preUnit2styleText2">Unit 2</string>
@@ -659,16 +686,29 @@
     <string name="preUnit2styleText38">c. Press the alt key</string>
     <string name="preUnit2styleText39">d. Press the shift key</string>
     <string name="preUnit2styleText40">9. ........ appears to the right of the main keyboard. The NumLock key is used to switch from numbers to editing keys.</string>
-    <string name="preUnit2styleText41">a.Cursor control key</string>
-    <string name="preUnit2styleText42">b.Alphanumeric key</string>
-    <string name="preUnit2styleText43">c.Function key</string>
-    <string name="preUnit2styleText44">d.A numeric keypad</string>
+    <string name="preUnit2styleText41">a. Cursor control key</string>
+    <string name="preUnit2styleText42">b. Alphanumeric key</string>
+    <string name="preUnit2styleText43">c. Function key</string>
+    <string name="preUnit2styleText44">d. A numeric keypad</string>
     <string name="preUnit2styleText45">10. What do you call the mouse which doesn\'t have a ball?</string>
     <string name="preUnit2styleText46">a. An optical mouse</string>
     <string name="preUnit2styleText47">b. An option mouse</string>
     <string name="preUnit2styleText48">c. An alternative mouse</string>
     <string name="preUnit2styleText49">d. An alphabet mouse</string>
 
+
+    <!--post unit3-->
+    <string name="postUnit3styleText1">Post-test</string>
+    <string name="postUnit3styleText5">2. ……………. is mass-produced, copyrighted retail software that meets the need of a wide variety of users, not just a single user or company.</string>
+    <string name="postUnit3styleText10">4. ………………….. is a collection of individual programs available together as a unit.</string>
+    <string name="postUnit3styleText15">7. ………………… software provides a means for sharing, distributing, and searching through documents by converting them into a format that can be viewed by any user.</string>
+    <string name="postUnit3styleText20">9. ……………………allows a user to plan, schedule, track, and analyze the events, resources, and costs of a project.</string>
+    <string name="postUnit3styleText25">1. A(n)………………… is an online area where users have written discussions.</string>
+    <string name="postUnit3styleText30">10. …………………… is the electronic equivalent of a user manual.</string>
+    <string name="postUnit3styleText35">8. With ……………., you can view, organize, sort, catalog, print and share digital photos.</string>
+    <string name="postUnit3styleText40">6. ……………….helps home and small business users create newsletters, brochures, advertisements, postcards, greeting cards, letterhead, business cards, banners, calendars, logos, and Web pages.</string>
+    <string name="postUnit3styleText45">5. ………………… software is available to the public at no cost.</string>
+    <string name="postUnit3styleText50">3. Some …………………….is considered system software because it works with hardware and transmission media.</string>
 
     <!--pre unit3-->
     <string name="preUnit3styleText1">Pre-test</string>
